@@ -42,6 +42,7 @@
 - added Matlab save file read
 - added Radiance file read
 - better file-not-found messages
+- im_magick2vips.c: allow funky bit depths, like 14 (thanks Mikkel)
 
 11/9/08 started 7.16.3
 - oop typo in manpage for im_project()
